--- a/Harry Potter/fanart.html
+++ b/Harry Potter/fanart.html
@@ -15,8 +15,8 @@
 			</a>
 			<nav>
 				<ul>
-					<li><a href="about.html">О создателе сайта</a></li>
-					<li><a href="fanart.html" class="selected">Фанарт</a></li>
+					<li><a href="about.html" class="selected">О создателе сайта</a></li>
+					<li><a href="fanart.html">Фанарт</a></li>
 					<li><a href="guestbook.html">Гостевая книга</a></li>
 				</ul>
 			</nav>
@@ -24,7 +24,13 @@
 
 		<div id="wrapper">
 			<section>
-				<div class="welcome-message"></div>
+				<div class="fan"><h2>Фанарт</h2>
+					<p>Рисунки поклонников</br>
+
+					</br>
+					</br>
+					</p>
+				</div>
 			</section>
 		</div>
 	</body>
@@ -37,6 +43,7 @@
 			<a href="mailto:na7tu6ka@gmail.com" target="_blank"><img src="img/mail.png"></a>
 			
 			<p>&copy; 2014 Анастасия Щепак</p>
+			</br>
 		</div>
 	</footer>
 
