--- a/Harry Potter/index.html
+++ b/Harry Potter/index.html
@@ -26,7 +26,7 @@
 			<section>
 				<div class="welcome-message">
 					<h2>Добро пожаловать на сайт неофициального фан-клуба Гарри Поттера!</h2>
-					<p class="justify">Сайт посвящён всем поттерманам и просто любителям любимого героя, которого создала замечательная писательница Джоан Роулинг.</br>Когда-то, давным-давно в 2003 году мною был создан сайт посвящённый Гарри Поттеру. Сайт работал около 3 лёт, итого был закрыт.</br></br>В 2014 году решила, что всё-таки стоит воссоздать сайт, где будут собираться поклонники. <span>Почему я решила восстановить страницу?</span></br>Во-первых, у меня заиграла ностальгия по тем временам, когда могла общаться с тем, с кем есть главный общий интерес.</br>Во-вторых, я учусь веб-дизайну и эта страница будет добавлена на мой сайт-портфолио.</br>В-третьих, поттерман никогда не умерает! <img src="img/snitch.gif" width="20" height="14"></br></br>
+					<p class="justify">Сайт посвящён всем поттерманам и просто любителям любимого героя, которого создала замечательная писательница Джоан Роулинг.</br>Когда-то, давным-давно в 2003 году мною был создан сайт посвящённый Гарри Поттеру. Сайт работал около 3 лёт, итого был закрыт.</br></br>В 2014 году решила, что всё-таки стоит воссоздать сайт, где будут собираться поклонники. <span>Почему я решила восстановить страницу?</span></br>Во-первых, у меня заиграла ностальгия по тем временам, когда могла общаться с тем, с кем есть главный общий интерес.</br>Во-вторых, я учусь веб-дизайну и эта страница будет добавлена на мой сайт-портфолио.</br>В-третьих, поттерман никогда не умерает! <img src="img/snitch.gif" width="20" height="14"></br></br></br>
 					</p>
 				</div>
 			</section>
@@ -41,6 +41,7 @@
 			<a href="mailto:na7tu6ka@gmail.com" target="_blank"><img src="img/mail.png"></a>
 			
 			<p>&copy; 2014 Анастасия Щепак</p>
+			</br>
 		</div>
 	</footer>
 
