--- a/Harry Potter/about.html
+++ b/Harry Potter/about.html
@@ -24,7 +24,13 @@
 
 		<div id="wrapper">
 			<section>
-				<div class="welcome-message"></div>
+				<div class="about-info"><h2>Обо мне</h2>
+					<p>Всем привет! Меня зовут Анастасия (можно просто Настя).</br>Как вы уже поняли - я создатель этого сайта.</br>
+
+					</br>
+					</br>
+					</p>
+				</div>
 			</section>
 		</div>
 	</body>
@@ -37,6 +43,7 @@
 			<a href="mailto:na7tu6ka@gmail.com" target="_blank"><img src="img/mail.png"></a>
 			
 			<p>&copy; 2014 Анастасия Щепак</p>
+			</br>
 		</div>
 	</footer>
 
