--- a/Elia portfolio/index.html
+++ b/Elia portfolio/index.html
@@ -112,15 +112,14 @@
 							<p><img src="img/works/snowman.jpg"></p>
 						</div>
 					</div>
-					<!-- <div class="bb-item">
+					<div class="bb-item">
+						<div class="bb-custom-side">
+							<p><img src="img/works/little_girl_EPS10.jpg"></p>
+						</div>
 						<div class="bb-custom-side">
 							<p>To be continued...</p>
 						</div>
-						<div class="bb-custom-side">
-							<div class="cotact"><p>Feel free to contact me!</p><br>
-							</div>
-						</div>
-					</div> -->
+					</div>
 				</div>																			
 				<nav>
 					<a id="bb-nav-first" href="#" class="bb-custom-icon bb-custom-icon-first">First page</a>
