Images, icons and content
Images, icons and content were added to the index.

--- a/Portfolio-v3/index.html
+++ b/Portfolio-v3/index.html
@@ -1,5 +1,50 @@
 <!DOCTYPE HTML>
 <html>
-	<head></head>
-	<body></body>
+	<head>
+		<title>Anastasija Scepak | Web Developer/Designer</title>
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
+	</head>
+	<body>
+		<header>
+			<h1>Stacie's Personal Portfolio</h1>
+			<nav>
+				<a href="#about">About</a>
+				<a href="#work">Work</a>
+				<a href="#contact">Contact</a>
+			</nav>
+		</header>
+		<div id="wrapper">
+			<div id="about">
+				<section class="firstColumn">
+					<img src="img/profile-photo.jpg" alt="Photograph of Anastasija Scepak" class="profilePhoto">
+				</section>
+
+				<section class="secondColumn">
+					<p>Hello, I'm Anastasija Scepak a web developer/desginer, curently located in United Kingdom. I'm a passionate web designer who likes to think out of the box and use my imagination while drafting, sketching and designing beautiful and interesting websites.</p>
+				</section>
+			<div>
+
+			<div id="work">
+				<p></p>
+			</div>
+
+			<div id="contact">
+				<p></p>
+
+				<div class="socialMedia">
+					<a href=""><img src="img/icons/linkedin.png"></a>
+					<a href=""><img src="img/icons/google_plus.png"></a>
+					<a href=""><img src="img/icons/facebook.png"></a>
+					<a href=""><img src="img/icons/twitter.png"></a>
+					<a href=""><img src="img/icons/instagram.png"></a>
+				</div>
+			</div>
+
+			<div class="copyright">
+			    <p>&copy; 2014 Anastasija Scepak</p>
+			</div>
+
+		</div>
+	</body>
 </html>
