--- a/Portfolio-v3/index.html
+++ b/Portfolio-v3/index.html
@@ -3,17 +3,20 @@
 	<head>
 		<title>Anastasija Scepak | Web Developer/Designer</title>
 		<link rel="stylesheet" href="css/normalize.css">
+		<link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic|Alegreya+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<header>
+		<div id="header">
 			<h1>Stacie's Personal Portfolio</h1>
 			<nav>
-				<a href="#about">About</a>
-				<a href="#work">Work</a>
-				<a href="#contact">Contact</a>
+				<ul>
+					<li><a href="#about">About</a></li>
+					<li><a href="#work">Work</a><li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
 			</nav>
-		</header>
+		</div>
 		<div id="wrapper">
 			<div id="about">
 				<section class="firstColumn">
@@ -31,20 +34,20 @@
 
 			<div id="contact">
 				<p></p>
-
+			</div>
+			<div id="footer">
 				<div class="socialMedia">
-					<a href=""><img src="img/icons/linkedin.png"></a>
-					<a href=""><img src="img/icons/google_plus.png"></a>
-					<a href=""><img src="img/icons/facebook.png"></a>
-					<a href=""><img src="img/icons/twitter.png"></a>
-					<a href=""><img src="img/icons/instagram.png"></a>
+						<a href=""><img src="img/icons/linkedin.png"></a>
+						<a href=""><img src="img/icons/google_plus.png"></a>
+						<a href=""><img src="img/icons/facebook.png"></a>
+						<a href=""><img src="img/icons/twitter.png"></a>
+						<a href=""><img src="img/icons/instagram.png"></a>
+					</div>
+
+				<div class="copyright">
+				    <p>&copy; 2014 Anastasija Scepak</p>
 				</div>
 			</div>
-
-			<div class="copyright">
-			    <p>&copy; 2014 Anastasija Scepak</p>
-			</div>
-
 		</div>
 	</body>
 </html>
