--- a/Portfolio-v3/index.html
+++ b/Portfolio-v3/index.html
@@ -4,11 +4,13 @@
 		<title>Anastasija Scepak | Web Developer/Designer</title>
 		<link rel="stylesheet" href="css/normalize.css">
 		<link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic|Alegreya+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Playball' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<div id="header">
 			<h1>Stacie's Personal Portfolio</h1>
+			<h2 class="quote">The journey of a thousand miles begins with one step. &copy; Lao Tzu</h2>
 			<nav>
 				<ul>
 					<li><a href="#about">About</a></li>
