--- a/Portfolio-v3/index.html
+++ b/Portfolio-v3/index.html
@@ -9,16 +9,19 @@
 	</head>
 	<body>
 		<div id="header">
-			<h1>Stacie's Personal Portfolio</h1>
-			<h2 class="quote">The journey of a thousand miles begins with one step. &copy; Lao Tzu</h2>
-			<nav>
-				<ul>
-					<li><a href="#about">About</a></li>
-					<li><a href="#work">Work</a><li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
-			</nav>
+			<div class="layer">
+				<h1>Stacie's Personal Portfolio</h1>
+				<h2 class="quote">The journey of a thousand miles begins with one step. &copy; Lao Tzu</h2>
+				<nav>
+					<ul>
+						<li><a href="#about">About</a></li>
+						<li><a href="#work">Work</a><li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+				</nav>
+			</div>
 		</div>
+
 		<div id="wrapper">
 			<div id="about">
 				<section class="firstColumn">
@@ -28,15 +31,27 @@
 				<section class="secondColumn">
 					<p>Hello, I'm Anastasija Scepak a web developer/desginer, curently located in United Kingdom. I'm a passionate web designer who likes to think out of the box and use my imagination while drafting, sketching and designing beautiful and interesting websites.</p>
 				</section>
-			<div>
+			</div>
 
 			<div id="work">
 				<p></p>
 			</div>
 
 			<div id="contact">
-				<p></p>
+				<section class="primary">
+					<h3>General Information</h3>
+					<p>If you have any questions, don't hesitate to contact me.</p>
+					<p>Please use phone contact only for urgent inquiries. <a href="http://twitter.com/intent/tweet?screen_name=na7tiu6ka" target="_blank">Twitter</a>, email or <a href="https://www.linkedin.com/profile/view?id=295708852" target="_blank">LinkedIn</a> are the best way to reach me.</p>
+				</section>
+				<section class="secondary">
+					<h3>Contact Details</h3>
+						<ol class="contactInfo">
+						<li class="phone"><a href="tel:+447583049544">+447583049544</a></li>
+						<li class="email"><a href="mailto:anastasija.scepak@gmail.com">anastasija.scepak@gmail.com</a></li>
+					</ol>
+				</section>
 			</div>
+
 			<div id="footer">
 				<div class="socialMedia">
 						<a href=""><img src="img/icons/linkedin.png"></a>
@@ -50,6 +65,7 @@
 				    <p>&copy; 2014 Anastasija Scepak</p>
 				</div>
 			</div>
+
 		</div>
 	</body>
 </html>
