--- a/Portfolio-v3/index.html
+++ b/Portfolio-v3/index.html
@@ -24,13 +24,15 @@
 
 		<div id="wrapper">
 			<div id="about">
-				<section class="firstColumn">
-					<img src="img/profile-photo.jpg" alt="Photograph of Anastasija Scepak" class="profilePhoto">
-				</section>
+				<div class="about1">
+					<section class="firstColumn">
+						<img src="img/profile-photo.jpg" alt="Photograph of Anastasija Scepak" class="profilePhoto">
+					</section>
 
-				<section class="secondColumn">
-					<p>Hello, I'm Anastasija Scepak a web developer/desginer, curently located in United Kingdom. I'm a passionate web designer who likes to think out of the box and use my imagination while drafting, sketching and designing beautiful and interesting websites.</p>
-				</section>
+					<section class="secondColumn">
+						<p>Hello, I'm Anastasija Scepak a web developer/desginer, curently located in United Kingdom. I'm a passionate web designer who likes to think out of the box and use my imagination while drafting, sketching and designing beautiful and interesting websites.</p>
+					</section>
+				</div>
 			</div>
 
 			<div id="work">
@@ -38,27 +40,29 @@
 			</div>
 
 			<div id="contact">
-				<section class="primary">
-					<h3>General Information</h3>
-					<p>If you have any questions, don't hesitate to contact me.</p>
-					<p>Please use phone contact only for urgent inquiries. <a href="http://twitter.com/intent/tweet?screen_name=na7tiu6ka" target="_blank">Twitter</a>, email or <a href="https://www.linkedin.com/profile/view?id=295708852" target="_blank">LinkedIn</a> are the best way to reach me.</p>
-				</section>
-				<section class="secondary">
-					<h3>Contact Details</h3>
-						<ol class="contactInfo">
-						<li class="phone"><a href="tel:+447583049544">+447583049544</a></li>
-						<li class="email"><a href="mailto:anastasija.scepak@gmail.com">anastasija.scepak@gmail.com</a></li>
-					</ol>
-				</section>
+				<div class="contact1">
+					<section class="primary">
+						<h3>General Information</h3>
+						<p>If you have any questions, don't hesitate to contact me.</br>
+						Please use phone contact only for urgent inquiries. The best way to reach me is by <a href="http://twitter.com/intent/tweet?screen_name=na7tiu6ka" target="_blank">Twitter</a>, email or <a href="https://www.linkedin.com/profile/view?id=295708852" target="_blank">LinkedIn</a></p>
+					</section>
+					<section class="secondary">
+						<h3>Contact Details</h3>
+							<ol class="contactInfo">
+							<li class="phone"><a href="tel:+447583049544">+447583049544</a></li>
+							<li class="email"><a href="mailto:anastasija.scepak@gmail.com">anastasija.scepak@gmail.com</a></li>
+						</ol>
+					</section>
+				</div>
 			</div>
 
 			<div id="footer">
 				<div class="socialMedia">
-						<a href=""><img src="img/icons/linkedin.png"></a>
-						<a href=""><img src="img/icons/google_plus.png"></a>
-						<a href=""><img src="img/icons/facebook.png"></a>
-						<a href=""><img src="img/icons/twitter.png"></a>
-						<a href=""><img src="img/icons/instagram.png"></a>
+						<a href="https://www.linkedin.com/profile/view?id=295708852" target="_blank"><img src="img/icons/linkedin.png"></a>
+						<a href="https://plus.google.com/u/0/+AnastasijaScepak" target="_blank"><img src="img/icons/google_plus.png"></a>
+						<a href="https://www.facebook.com/anastasija.scepak" target="_blank"><img src="img/icons/facebook.png"></a>
+						<a href="https://twitter.com/na7tiu6ka" target="_blank"><img src="img/icons/twitter.png"></a>
+						<a href="http://instagram.com/na7tiu6ka" target="_blank"><img src="img/icons/instagram.png"></a>
 					</div>
 
 				<div class="copyright">
