--- a/Portfolio-v3/index.html
+++ b/Portfolio-v3/index.html
@@ -6,6 +6,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic|Alegreya+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Playball' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="icon" href="img/icon.ico">
 	</head>
 	<body>
 		<div id="header">
@@ -36,23 +37,14 @@
 			</div>
 
 			<div id="work">
-				<p></p>
+				<div class="work1">
+					<p></p>
+				</div>
 			</div>
 
 			<div id="contact">
 				<div class="contact1">
-					<section class="primary">
-						<h3>General Information</h3>
-						<p>If you have any questions, don't hesitate to contact me.</br>
-						Please use phone contact only for urgent inquiries. The best way to reach me is by <a href="http://twitter.com/intent/tweet?screen_name=na7tiu6ka" target="_blank">Twitter</a>, email or <a href="https://www.linkedin.com/profile/view?id=295708852" target="_blank">LinkedIn</a></p>
-					</section>
-					<section class="secondary">
-						<h3>Contact Details</h3>
-							<ol class="contactInfo">
-							<li class="phone"><a href="tel:+447583049544">+447583049544</a></li>
-							<li class="email"><a href="mailto:anastasija.scepak@gmail.com">anastasija.scepak@gmail.com</a></li>
-						</ol>
-					</section>
+						<h3>Contact me</h3>
 				</div>
 			</div>
 
