JS folder of stellar paralax.
Added a folder of stellar js
Font size change and size of a cover photo

--- a/Portfolio-v3/index.html
+++ b/Portfolio-v3/index.html
@@ -10,6 +10,7 @@
 	</head>
 	<body>
 		<div id="header">
+			<div id="top"></div>
 			<div class="layer">
 				<h1>Stacie's Personal Portfolio</h1>
 				<h2 class="quote">The journey of a thousand miles begins with one step. &copy; Lao Tzu</h2>
@@ -31,8 +32,12 @@
 					</section>
 
 					<section class="secondColumn">
-						<p>Hello, I'm Anastasija Scepak a web developer/desginer, curently located in United Kingdom. I'm a passionate web designer who likes to think out of the box and use my imagination while drafting, sketching and designing beautiful and interesting websites.</p>
-					</section>
+						<p>Hello, I'm Anastasija Scepak a web developer/desginer, curently located in United Kingdom. I'm a passionate web designer who likes to think out of the box and use my imagination while drafting, sketching and designing beautiful and interesting websites.
+						<br>
+						<br>I've graduated as a bachelor in philology from Vilnius University (Kaunas Faculty of Humanities) in 2013. The idea of becoming a web designer was given by my boyfriend before graduating. But at that moment my mind was set at becoming a translator. My first experience in making a website was when I was 13 years old. I made my first website dedicated to Harry Potter. To tell the truth - I didn't know what I was doing. Everything was made in HTML without using CSS or JavaScript. In a word - there was no decent design. But at that moment I was proud of myself. That experience really helped me a lot while I was and still am learning about web design and web development. <br>I really enjoy working on websites, polishing up my skills and learn something new.
+						<br>
+						<br>If you'd like to follow me on Twitter, my user name is <a href="http://www.twitter.com/na7tiu6ka" target="_blank">@na7tiu6ka</a>.</p>
+						</section>
 				</div>
 			</div>
 
@@ -58,10 +63,14 @@
 					</div>
 
 				<div class="copyright">
-				    <p>&copy; 2014 Anastasija Scepak</p>
+				    <p>&copy; 2014 Anastasija Scepak</p> 
 				</div>
 			</div>
 
 		</div>
+
+		</script>
+
+
 	</body>
 </html>
