Changes on the page
Icon change,
.borderNav added
color chnage
margin change

--- a/Portfolio-v3/index.html
+++ b/Portfolio-v3/index.html
@@ -7,6 +7,8 @@
 		<link href='http://fonts.googleapis.com/css?family=Playball' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="icon" href="img/icon.ico">
+		<script type="text/javascript" src="js/jquery.min.js"></script>
+		<script type="text/javascript" src="js/stellar.js"></script>
 
 	</head>
 	<body>
@@ -14,15 +16,17 @@
 			<div id="top"></div>
 			<div class="layer">
 				<div class="coverNav">
-					<h1>Stacie's Personal Portfolio</h1>
-					<h2 class="quote">The journey of a thousand miles begins with one step. &copy; Lao Tzu</h2>
-					<nav>
-						<ul>
-							<li><a href="#about">About</a></li>
-							<li><a href="#work">Work</a><li>
-							<li><a href="#contact">Contact</a></li>
-						</ul>
-					</nav>
+					<div class="borderNav">
+						<h1>Stacie's Personal Portfolio</h1>
+						<h2 class="quote">The journey of a thousand miles begins with one step. &copy; Lao Tzu</h2>
+						<nav>
+							<ul>
+								<li><a href="#about">About</a></li>
+								<li><a href="#work">Work</a><li>
+								<li><a href="#contact">Contact</a></li>
+							</ul>
+						</nav>
+					</div>
 				</div>
 				<div class="overlay"></div>
 			</div>
@@ -36,10 +40,10 @@
 					</section>
 
 					<section class="secondColumn">
+						<div class="aboutMe"><h2>About me</h2></div>
 						<p>Hello, I'm Anastasija Scepak a web developer/desginer, curently located in United Kingdom. I'm a passionate web designer who likes to think out of the box and use my imagination while drafting, sketching and designing beautiful and interesting websites.
 						<br>
-						<br>I've graduated as a bachelor in philology from Vilnius University (Kaunas Faculty of Humanities) in 2013. The idea of becoming a web designer was given by my boyfriend before graduating. But at that moment my mind was set at becoming a translator. My first experience in making a website was when I was 13 years old. I made my first website dedicated to Harry Potter. To tell the truth - I didn't know what I was doing. Everything was made in HTML without using CSS or JavaScript. In a word - there was no decent design. But at that moment I was proud of myself. That experience really helped me a lot while I was and still am learning about web design and web development. <br>I really enjoy working on websites, polishing up my skills and learn something new.
-						<br>
+						<br>I've graduated as a bachelor in philology from Vilnius University (Kaunas Faculty of Humanities) in 2013. The idea of becoming a web designer was given by my boyfriend before graduating. But at that moment my mind was set at becoming a translator. My first experience in making a website was when I was 13 years old. I made my first website dedicated to Harry Potter. To tell the truth - I didn't know what I was doing. Everything was made in HTML without using CSS or JavaScript. In a word - there was no decent design. But at that moment I was proud of myself. That experience really helped me a lot while I was and still am learning about web design and web development. I really enjoy working on websites, polishing up my skills and learn something new.
 						<br>If you'd like to follow me on Twitter, my user name is <a href="http://www.twitter.com/na7tiu6ka" target="_blank">@na7tiu6ka</a>.</p>
 						</section>
 				</div>
@@ -53,14 +57,14 @@
 
 			<div id="contact">
 				<div class="contact1">
-						<h3>Contact me</h3>
+					<h2>Contact me</h2>
 				</div>
 			</div>
 
 			<div id="footer">
 				<div class="socialMedia">
 						<a href="https://www.linkedin.com/profile/view?id=295708852" target="_blank"><img src="img/icons/linkedin.png"></a>
-						<a href="https://plus.google.com/u/0/+AnastasijaScepak" target="_blank"><img src="img/icons/google_plus.png"></a>
+						<a href="https://plus.google.com/u/0/+AnastasijaScepak" target="_blank"><img src="img/icons/googleplus.png"></a>
 						<a href="https://www.facebook.com/anastasija.scepak" target="_blank"><img src="img/icons/facebook.png"></a>
 						<a href="https://twitter.com/na7tiu6ka" target="_blank"><img src="img/icons/twitter.png"></a>
 						<a href="http://instagram.com/na7tiu6ka" target="_blank"><img src="img/icons/instagram.png"></a>
@@ -74,11 +78,7 @@
 		</div>
 
 
-
-
 		<!-- Cover Blur Paralax -->
-		<script type="text/javascript" src="js/jquery.min.js"></script>
-		<script type="text/javascript" src="js/stellar.js"></script>
 		<script>
 
 		/* Cache */
@@ -156,15 +156,6 @@
 
 		</script>
 		<!-- Cover Blur Paralax End -->
-
-
-
-
-
-
-
-
-
 
 
 
