php contact file
php contact file added for contact form

--- a/Portfolio-v3/index.html
+++ b/Portfolio-v3/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<title>Anastasija Scepak | Web Developer/Designer</title>
 		<link rel="stylesheet" href="css/normalize.css">
 		<link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic|Alegreya+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
@@ -45,7 +46,7 @@
 						<br>
 						<br>I've graduated as a bachelor in philology from Vilnius University (Kaunas Faculty of Humanities) in 2013. The idea of becoming a web designer was given by my boyfriend before graduating. But at that moment my mind was set at becoming a translator. My first experience in making a website was when I was 13 years old. I made my first website dedicated to Harry Potter. To tell the truth - I didn't know what I was doing. Everything was made in HTML without using CSS or JavaScript. In a word - there was no decent design. But at that moment I was proud of myself. That experience really helped me a lot while I was and still am learning about web design and web development. I really enjoy working on websites, polishing up my skills and learn something new.
 						<br>If you'd like to follow me on Twitter, my user name is <a href="http://www.twitter.com/na7tiu6ka" target="_blank">@na7tiu6ka</a>.</p>
-						</section>
+					</section>
 				</div>
 			</div>
 
@@ -90,9 +91,7 @@
 			  wHeight = $(window).height();
 			});
 
-			/**
-			 * requestAnimationFrame Shim 
-			 */
+			/* requestAnimationFrame Shim */
 			window.requestAnimFrame = (function()
 			{
 			  return  window.requestAnimationFrame       ||
