Web page for architecture
..

--- a/Elia portfolio/index.html
+++ b/Elia portfolio/index.html
@@ -29,7 +29,7 @@
 							</div>
 						</div>
 						<div class="bb-custom-side">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+							<p>Hello! My name is Elia. Currently I am located in Lithuania, Kaunas. I like to draw in Illustrator. Feel free to check out my works!</p>
 						</div>
 					</div>
 					<div class="bb-item">
