--- a/Porftolio-v2/index.html
+++ b/Porftolio-v2/index.html
@@ -20,6 +20,35 @@
 						verticalOffset: 50
 					});
 				});
+
+				$(document).ready(function() {
+
+$('body').css('display', 'none');
+
+$('body').fadeIn(1000);
+
+
+
+$('.link').click(function(event) {
+
+event.preventDefault();
+
+newLocation = this.href;
+
+$('body').fadeOut(1000, newpage);
+
+});
+
+
+
+function newpage() {
+
+window.location = newLocation;
+
+}
+
+});
+
 			</script>
 
 		<!-- header end -->
