--- a/Page for portfolio/index.html
+++ b/Page for portfolio/index.html
@@ -8,7 +8,6 @@
 		<link rel="icon" href="img/icon.ico">
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 
-
 	</head>
 
 	<body>
@@ -53,32 +52,38 @@
 			</nav>
 
 			<div class="copyRight">
-				<p class="copyright">Site by <a href="http://www.staciedesign.com" target="_blank">Anastasija Scepak</a></p>
-			    <p class="copyright2">All Rights Reserved &copy; Vitalij Duk</p></br>
+				<p class="copyright">All Rights Reserved &copy; Vitalij Duk | Site by <a href="http://www.staciedesign.com" target="_blank">Anastasija Scepak</a></p>
 			</div>
 		</div>
 
 		<script>
+			/* Sticky footer */
 			$(document).ready(function() {
-			$('body').css('display', 'none');
-			$('body').fadeIn(1000);
 
+			var docHeight = $(window).height();
+			var footerHeight = $('#footer').height();
+			var footerTop = $('#footer').position().top + footerHeight;
 
-			$('.link').click(function(event) {
-				event.preventDefault();
-				newLocation = this.href;
-				$('body').fadeOut(1000, newpage);
-
-			});
-
-
-
-			function newpage() {
-				window.location = newLocation;
-
+			if (footerTop < docHeight) {
+			$('#footer').css('margin-top', 200 + (docHeight - footerTop) + 'px');
 			}
+			});
+			/* Sticky footer end */
 
-		});
+			/* Fade in/out */
+			$(document).ready(function(){
+			    // to fade in on page load
+			    $("body").css("display", "none");
+			    $("body").fadeIn(400); 
+			    // to fade out before redirect
+			    $('a').click(function(e){
+			        redirect = $(this).attr('href');
+			        e.preventDefault();
+			        $('body').fadeOut(400, function(){
+			            document.location.href = redirect
+			        });
+			    });
+			});
 		</script>
 
 	</body>
