--- a/Page for portfolio/contact.html
+++ b/Page for portfolio/contact.html
@@ -17,15 +17,42 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="contact.html" class="selected">Contact</a></li>
 					</ul>
 				</nav>
 			</div>
 		</div>
 
 		<div id="wrapper">
-			<div id="contact form">
-				<h2>Contact me</h2>
+			<h2>Contact me</h2>
+			<div id="additionalInfo">
+				<p>Feel free to message me or contact via social media.</p>
+				<div class="socialMedia">
+					<a href="https://www.linkedin.com/profile/view?id=345471874"><img src="img/linkedin.png"></a>
+					<a href="https://www.facebook.com/vitalij.duk"><img src="img/facebook.png"></a>
+				</div>
+			</div>
+			<div id="contact">
+					<p>
+						<label for="name">Name:*</label>
+						<input name="name" id="name" type="text" class="required emailField">
+					</p>
+
+					<p>
+						<label for="email">Email:*</label>
+						<input name="email" id="email" type="text" class="required emailField"> 
+					</p>
+
+					<p>
+						<label for="message">Message:</label>
+						<textarea name="message" id="message" class="required emailField"></textarea> 
+					</p>
+
+					<p class="submit">
+						<img src="img/loader.gif" class="btn-submit-img" style="display: none">
+						<input type="submit" value="Submit" class="btn-submit" disabled>
+						<div class="btn-submit-txt" style="display: none">Your email has been successfully sent!</div>
+					</p>
 			</div>
 		</div>
 
@@ -53,7 +80,7 @@
 			var footerTop = $('#footer').position().top + footerHeight;
 
 			if (footerTop < docHeight) {
-			$('#footer').css('margin-top', 200 + (docHeight - footerTop) + 'px');
+			$('#footer').css('margin-top', 10 + (docHeight - footerTop) + 'px');
 			}
 			});
 			/* Sticky footer end */
@@ -62,12 +89,12 @@
 			$(document).ready(function(){
 			    // to fade in on page load
 			    $("body").css("display", "none");
-			    $("body").fadeIn(400); 
+			    $("body").fadeIn(350); 
 			    // to fade out before redirect
 			    $('a').click(function(e){
 			        redirect = $(this).attr('href');
 			        e.preventDefault();
-			        $('body').fadeOut(400, function(){
+			        $('body').fadeOut(500, function(){
 			            document.location.href = redirect
 			        });
 			    });
