--- a/Page for portfolio/gallery.html
+++ b/Page for portfolio/gallery.html
@@ -16,7 +16,7 @@
 				<nav class="upperNav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="gallery.html">Gallery</a></li>
+						<li><a href="gallery.html" class="selected">Gallery</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav>
@@ -33,7 +33,7 @@
 			<nav class="footerNav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="gallery.html">Gallery</a></li>
+					<li><a href="gallery.html" class="selected">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
@@ -44,29 +44,17 @@
 		</div>
 
 		<script>
-			/* Sticky footer */
-			$(document).ready(function() {
-
-			var docHeight = $(window).height();
-			var footerHeight = $('#footer').height();
-			var footerTop = $('#footer').position().top + footerHeight;
-
-			if (footerTop < docHeight) {
-			$('#footer').css('margin-top', 200 + (docHeight - footerTop) + 'px');
-			}
-			});
-			/* Sticky footer end */
 
 			/* Fade in/out */
 			$(document).ready(function(){
 			    // to fade in on page load
 			    $("body").css("display", "none");
-			    $("body").fadeIn(400); 
+			    $("body").fadeIn(350); 
 			    // to fade out before redirect
 			    $('a').click(function(e){
 			        redirect = $(this).attr('href');
 			        e.preventDefault();
-			        $('body').fadeOut(400, function(){
+			        $('body').fadeOut(500, function(){
 			            document.location.href = redirect
 			        });
 			    });
