--- a/Page for portfolio/gallery.html
+++ b/Page for portfolio/gallery.html
@@ -17,7 +17,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="gallery.html" class="selected">Gallery</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="info.html">Info</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -33,7 +33,7 @@
 			<nav class="footerNav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="gallery.html" class="selected">Gallery</a></li>
+					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
@@ -44,6 +44,19 @@
 		</div>
 
 		<script>
+
+			/* Sticky footer */
+			$(document).ready(function() {
+
+			var docHeight = $(window).height();
+			var footerHeight = $('#footer').height();
+			var footerTop = $('#footer').position().top + footerHeight;
+
+			if (footerTop < docHeight) {
+			$('#footer').css('margin-top', 100 + (docHeight - footerTop) + 'px');
+			}
+			});
+			/* Sticky footer end */
 
 			/* Fade in/out */
 			$(document).ready(function(){
