--- a/Page for portfolio/index.html
+++ b/Page for portfolio/index.html
@@ -17,7 +17,7 @@
 					<ul>
 						<li><a href="index.html" class="selected">Home</a></li>
 						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="info.html">Contact</a></li>
 					</ul>
 				</nav>
 			</div>
