--- a/Page for portfolio/info.html
+++ b/Page for portfolio/info.html
@@ -27,9 +27,16 @@
 			<h2 class="info">About Vitalij Duk</h2>
 			<div id="additionalInfo">
 				<div class="profilePhoto"><img src="img/profilePhoto.jpg" alt="photo of Vitalij Duk"></div>
-
-				<p>Some text about the architect to know him better.</p>
-				<p>If you have any questions, don't hesitate to contact me.</p>
+				<div class="about">
+					<p>A competent architecture designer with a thriving passion for technology and design. Demonstrates a versatile and quick grasp of complex issues as well as enjoys working in team.</br> 
+					</br> 
+					Over the course of studies I've gained a lot of experience in AutoCAD, Revit, 3Ds Max and Vray as well as in Mental Ray, Sketchup, Adobe Photoshop, Indesign, Illustrator and ZBrush. </br> 
+					</br> 
+					My core competency lies in 3D design, rendering and technical drawings, and I am seeking opportunities that will enable me consolidate my skills and might expand my knowledge.</br> 
+					</br> 
+					Some text about the architect to know him better.</br> 
+					If you have any questions, don't hesitate to contact me.</p>
+				</div>
 				<div class="socialMedia">
 					<a href="https://www.linkedin.com/profile/view?id=345471874"><img src="img/linkedin.png"></a>
 					<a href="https://www.facebook.com/vitalij.duk"><img src="img/facebook.png"></a>
@@ -43,7 +50,7 @@
 				</p>
 
 				<p>
-					<label for="email">Email adress:</label>
+					<label for="email">Email address:</label>
 					<input name="email" id="email" type="text" class="required emailField"> 
 				</p>
 
