--- a/Page for portfolio/info.html
+++ b/Page for portfolio/info.html
@@ -28,14 +28,17 @@
 			<div id="additionalInfo">
 				<div class="profilePhoto"><img src="img/profilePhoto.jpg" alt="photo of Vitalij Duk"></div>
 				<div class="about">
-					<p>Some text about the architect to know him better.</br> 
-					A competent architecture designer with a thriving passion for technology and design.Demonstrates a versatile and quick grasp of complex issues as well as enjoys working in team.</br> 
-					</br> 
-					Over the course of studies I've gained a lot of experience in AutoCAD, Revit, 3Ds Max and Vray as well as in Mental Ray, Sketchup, Adobe Photoshop, Indesign, Illustrator and ZBrush. </br> 
-					</br> 
-					My core competency lies in 3D design, rendering and technical drawings, and I am seeking opportunities that will enable me consolidate my skills and might expand my knowledge.</br> 
-					</br> 
-					If you have any questions, don't hesitate to contact me.</p>
+					<p>
+						Some text about the architect to know him better:</br>
+						</br>
+						A competent architecture designer with a thriving passion for technology and design.Demonstrates a versatile and quick grasp of complex issues as well as enjoys working in team.</br> 
+						</br> 
+						Over the course of studies I've gained a lot of experience in AutoCAD, Revit, 3Ds Max and Vray as well as in Mental Ray, Sketchup, Adobe Photoshop, Indesign, Illustrator and ZBrush. </br> 
+						</br> 
+						My core competency lies in 3D design, rendering and technical drawings, and I am seeking opportunities that will enable me consolidate my skills and might expand my knowledge.</br>
+						</br> 
+						If you have any questions, don't hesitate to contact me.
+					</p>
 				</div>
 				<div class="socialMedia">
 					<a href="https://www.linkedin.com/profile/view?id=345471874"><img src="img/linkedin.png"></a>
