--- a/Page for portfolio/index.html
+++ b/Page for portfolio/index.html
@@ -4,7 +4,8 @@
 		<title>Vitalij Duk | Personal Portfolio</title>
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic|Open+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css"
+
 		<link rel="icon" href="img/icon.ico">
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 
